Adding fully functional Chatbot and JWT